hello-app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-deployment
  labels:
    app: hello-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app 
    spec:
      containers:
      - name: hello-app 
        image: gcr.io/google-samples/hello-app:1.0 
        ports:
        - containerPort: 8080
