my-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /hello-app(/|$)(.*)
        backend:
          serviceName: hello-app
          servicePort: 8675
      - path: /echo-python(/|$)(.*)
        backend:
          serviceName: echo-python
          servicePort: 9329
